marvelus_examples/tests/neg/fby.zls
(* ==== NEG 4: FBY tail mismatch (off-by-one) ==== *)
let node fby_tail_mismatch (a:{(v:int)| true}) : {(v:int) | nxt(globally(v = a + 1))} =
  0 fby a

let hybrid main () = ()
